# eval-magic

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  rewrite-roadmap.md
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish-crates.yml  release-pr.yml  release.yml  tag-release.yml
docs/: harness-parity.md  isolated-run.md
profiles/claude-code/: runbook.md
profiles/codex/: plan-mode.md
profiles/opencode/: plan-mode.md
profiles/shared/: plan-mode.md  runbook.md
schema/: benchmark.schema.json  evals.schema.json  judge-tasks.schema.json  run-record.schema.json  stray-writes.schema.json
src/: lib.rs  main.rs
src/adapters/: claude_cli.rs  claude_code_session.rs  claude_code_transcript.rs  claude_stream_json.rs  cli_command.rs  codex_cli.rs  codex_session.rs  codex_transcript.rs  harness.rs  mod.rs  opencode_session.rs  plugin_shadow.rs
src/cli/: args.rs  help.rs  mod.rs
src/cli/commands/: guard.rs  init.rs  mod.rs  pipeline.rs  run.rs  validate.rs  workspace.rs
src/cli/run/: codex_dispatch.rs  dispatch.rs  fixtures.rs  grouping.rs  mod.rs  orchestrate.rs  runbook.rs  staging.rs  steps.rs  util.rs
src/cli/run/orchestrate/: build.rs  envs.rs  mod.rs  resolve.rs  stage.rs
src/cli/run/staging/: mod.rs
src/cli/run/staging/tests/: cleanup.rs  mod.rs  sibling.rs  stage.rs
src/core/: capabilities.rs  context.rs  mod.rs  run_mode.rs  runtime.rs  types.rs
src/pipeline/: aggregate.rs  detect_stray_writes.rs  error.rs  fill_transcripts.rs  io.rs  mod.rs  record_runs.rs  slots.rs
src/pipeline/grade/: finalize.rs  judge_tasks.rs  mod.rs  transcript_check.rs
src/sandbox/: decide.rs  guard.rs  install.rs  mod.rs  policy.rs
src/validation/: batch.rs  error.rs  evals.rs  mod.rs  schema.rs
src/workspace/: mod.rs  promote.rs  snapshot.rs  teardown.rs
tests/: cli.rs  run.rs
tests/cli/: aggregate.rs  basics.rs  grade.rs  grade_models.rs  guard.rs  helpers.rs  init.rs  main.rs  package.rs  stray_writes.rs  workspace.rs
tests/run/: claude_cli.rs  codex.rs  env_layout.rs  grouping.rs  helpers.rs  lifecycle.rs  main.rs  opencode.rs  reset_batch.rs  runbook.rs  staging.rs  switch_condition.rs
